Fixed issue with off center nav menu

--- a/src/App.scss
+++ b/src/App.scss
@@ -117,7 +117,9 @@ nav {
   .hamburger-menu {
     display: none;
   }
-
+  .nav-link__wrapper {
+    
+  }
   .nav-link {
     font-family: 'Spartan', sans-serif;
     text-transform: uppercase;
